tests/negative/typecheck/catch-non-err.orng
fn main() -> Int
    4 catch 5